# hrm_nextbean_api/services/AccountServices/controller/update_account.go
@@ -14,18 +14,18 @@ import (
 	"github.com/PhuPhuoc/hrm_nextbean_api/utils"
 )
 
-// @Summary		create new account
-// @Description	account creation information
+// @Summary		update account
+// @Description	update account's information
 // @Tags			Account
 // @Accept			json
 // @Produce		json
-// @Param			request	body		model.AccountCreationInfo	true	"account creation request"
-// @Success		200		{object}	utils.success_response		"Successful create"
-// @Failure		400		{object}	utils.error_response		"create failure"
-// @Router			/api/v1/account [post]
-func HandleCreateAccount(db *sql.DB) func(rw http.ResponseWriter, req *http.Request) {
+// @Param			request	body		model.UpdateAccountInfo	true	"account creation request"
+// @Success		200		{object}	utils.success_response	"Successful update"
+// @Failure		400		{object}	utils.error_response	"update failure"
+// @Router			/api/v1/account [put]
+func HandleUpdateAccount(db *sql.DB) func(rw http.ResponseWriter, req *http.Request) {
 	return func(rw http.ResponseWriter, req *http.Request) {
-		acc_info := new(model.AccountCreationInfo)
+		acc_info := new(model.UpdateAccountInfo)
 		var req_body_json map[string]interface{}
 
 		var body_data bytes.Buffer
@@ -43,8 +43,8 @@ func HandleCreateAccount(db *sql.DB) func(rw http.ResponseWriter, req *http.Requ
 		json.Unmarshal(body_data.Bytes(), acc_info)
 
 		store := repository.NewAccountStore(db)
-		biz := business.NewCreateAccountBusiness(store)
-		if err := biz.CreateNewAccountBiz(acc_info); err != nil {
+		biz := business.NewUpdateAccountBusiness(store)
+		if err := biz.UpdateAccountBiz(acc_info); err != nil {
 			if strings.Contains(err.Error(), "exists") {
 				utils.WriteJSON(rw, utils.ErrorResponse_BadRequest(err.Error(), err))
 			} else {
@@ -52,6 +52,6 @@ func HandleCreateAccount(db *sql.DB) func(rw http.ResponseWriter, req *http.Requ
 			}
 			return
 		}
-		utils.WriteJSON(rw, utils.SuccessResponse_MessageCreated("Account created successfully!"))
+		utils.WriteJSON(rw, utils.SuccessResponse_MessageUpdated("Account updated successfully!"))
 	}
 }
