# hrm_nextbean_api/services/AccountServices/model/model_account.go
@@ -3,10 +3,10 @@ package model
 import "time"
 
 type Account struct {
-	Id          string    `json:"id"`
-	UserName    string    `json:"user_name"`
-	Email       string    `json:"email"`
-	Password    string    `json:"-"`
-	Role        string    `json:"account_role"`
-	CreatedTime time.Time `json:"-"`
+	Id        string    `json:"id"`
+	UserName  string    `json:"user-name"`
+	Email     string    `json:"email"`
+	Password  string    `json:"-"`
+	Role      string    `json:"role"`
+	CreatedAt time.Time `json:"created-at"`
 }
